testdata/golden/parser/invalid/nested_fn_not_supported.fmt
@entrypoint
fn main() {
    fn inner() -> int;
    print("ok");
}
